<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    <ImageView
            android:id="@+id/year_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="20dp"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/for_description_delete_logo"/>

    <TextView
            android:id="@+id/delete_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/year_logo"/>

    <TextView
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/for_confirm_button"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="@color/colorSteelBlue"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/delete_text_view"/>

    <TextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/for_cancel_button"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="@color/colorSteelBlue"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/confirm_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>