<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="com.example.myplaceinfo.date.viewmodel.DateViewModel"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/month_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/for_month_header_text_view"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <Spinner
                android:id="@+id/spinner_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onItemSelected="@{(a,b,v,c) -> viewModel.onItemSelectedMonth(v)}"
                android:entries="@array/month_list"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@id/month_header"
                app:layout_constraintEnd_toEndOf="@id/month_header"
                app:layout_constraintTop_toBottomOf="@id/month_header">
        </Spinner>

        <TextView
                android:id="@+id/date_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/for_date_header_text_view"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorBlack"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@id/spinner_month"
                app:layout_constraintTop_toBottomOf="@id/spinner_month"/>

        <Spinner
                android:id="@+id/spinner_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onItemSelected="@{(a,b,v,c) -> viewModel.onItemSelectedDay(v)}"
                android:entries="@array/month_list_long"
                app:layout_constraintStart_toStartOf="@id/date_header"
                app:layout_constraintEnd_toEndOf="@id/date_header"
                app:layout_constraintTop_toBottomOf="@id/date_header"
                android:textAlignment="center">
        </Spinner>

        <Button
                android:id="@+id/show_facts_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/for_show_fact_button"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:onClick="@{() -> viewModel.onClickShowFactButton()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>